# transon-authoring-skill

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: milestone-planner.md  requirement-implementer.md  spec-reviewer.md
.claude/commands/: implement-requirement.md  local-haiku-eval.md  propose-spec-change.md  run-milestone.md
.claude/hooks/: handoff-memory.py
.claude/rules/: hygiene.md
.claude/workflows/: local-haiku-eval.js
.cursor/: hooks.json
.cursor/agents/: milestone-planner.md  requirement-implementer.md  spec-reviewer.md
.cursor/commands/: implement-requirement.md  propose-spec-change.md  run-milestone.md
.cursor/hooks/: handoff-memory.py
.cursor/rules/: hygiene.mdc  spec-discipline.mdc
.github/workflows/: ci.yml  cursor-activation-smoke.yml  evals-smoke.yml  evals.yml  release.yml
adapters/claude/: README.md  adapter.json
adapters/cursor/: README.md  adapter.json
docs/: ARCHITECTURE.md  ROADMAP.md  SPEC.md  current-state.md  id-ledger.json  traceability.md
docs/proposals/: big-real-world-transform-samples.md  rfc-001-synthetic-eval-corpus-for-small-models.md  rfc-002-real-host-eval-harness.md  rfc-003-engine-repin-and-language-reference.md
evals/: baseline.json  runner.json  targets.json
evals/cases/: ec2-flatten-inventory.json  ec2-instance-ids.json  ec2-running-only.json  ec2-tag-pivot.json  ec2-volume-ids.json  github-branch-from-ref.json  github-commit-count.json  github-deploy-event.json  github-files-changed.json  github-head-projection.json  github-slack-text.json  order-uppercase-currency.json  refuse-epoch-to-iso.json  refuse-random-winner.json  refuse-recursive-flatten.json  refuse-sha256-checksum.json  refuse-strip-ref-branch.json  refuse-uppercase-currency.json  seed-correction-attr-misspelled.json  seed-matched-attr-dynamic-name.json  seed-matched-flatten-orders.json  seed-matched-map-chain-attrs.json  seed-refuse-nonexistent-mode.json  seed-refuse-nonexistent-operator.json  stripe-amounts-to-decimal.json  stripe-customer-record.json  stripe-envelope-unwrap.json  stripe-epoch-to-iso.json  stripe-line-items.json  stripe-metadata-promotion.json  syn-attr-dynamic-reference-multiple-names.json  syn-attr-simple-fixed-name.json  syn-chain-with-attr.json  syn-cond-default-branch.json  syn-cond-first-truthy-arm.json  syn-convert-no-parameters.json  syn-convert-value.json  syn-expr-simple-monads1.json  syn-expr-simple-monads2.json  syn-expr-simple-values1.json  (+17 more)
evals/seeds/: ec2-flatten-inventory.json  ec2-instance-ids.json  ec2-running-only.json  ec2-tag-pivot.json  ec2-volume-ids.json  github-branch-from-ref.json  github-commit-count.json  github-deploy-event.json  github-files-changed.json  (+36 more)
harness/: README.md
install/: _shared.py  claude.py  cursor.py
resources/: language-reference.json  metadata-snapshot.json  metadata-snapshot.md  nl-intents.json
scripts/: _shared.py  cache_ab.py  check_evals.py  check_install.py  check_parity.py  check_snapshot.py  eval_harness.py  eval_key_proxy.py  gen_fixtures.py  host_harness.py  local_eval.py  ollama_eval.py  scan_transcripts.py  summarize_run.py  sync_metadata.py  sync_plugin.py
tests/: test_ac001_path.py  test_adapters.py  test_authoring_result_statuses.py  test_authority.py  test_check_evals.py  test_check_install.py  test_check_parity.py  test_check_samples.py  test_check_snapshot.py  test_cli_a1.py  test_cli_language.py  test_cli_metadata.py  test_config.py  test_determinism.py  test_envelopes.py  test_eval_artifacts.py  test_eval_harness.py  test_examples.py  test_fr002_ci_path.py  test_gen_fixtures.py  test_host_harness.py  test_ingress.py  test_install.py  test_match.py  test_metadata.py  test_observability.py  test_offline.py  test_package.py  test_sample_persistence.py  test_sandbox.py  test_schemas.py  test_skill_body.py  test_sync_metadata.py  test_sync_plugin.py  test_tags.py  test_v1_wave.py  test_verify.py  test_worker.py
(+45 files in other folders)
