[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transon-authoring"
version = "0.0.1"
description = "Authoring capability for AI agents that produces engine-valid Transon JSON, verified to assurance: matched (docs/SPEC.md)"
readme = "README.md"
requires-python = ">=3.10"
# AD-007 — initial engine pin (A0 baseline). Bumping this pin is a deliberate,
# reviewed change: sync the metadata snapshot and refresh the NL sidecar with it.
dependencies = ["transon==0.1.7"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/transon_authoring"]

[tool.pytest.ini_options]
testpaths = ["tests"]
