[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transon-authoring"
version = "0.0.1"
description = "Authoring capability for AI agents that produces engine-valid Transon JSON, verified to assurance: matched (docs/SPEC.md)"
readme = "README.md"
requires-python = ">=3.10"
# AD-007 — initial engine pin (A0 baseline). Bumping this pin is a deliberate,
# reviewed change: sync the metadata snapshot and refresh the NL sidecar with it.
dependencies = [
    "transon==0.2.3",
    # OQ-014e — runtime JSON Schema (draft 2020-12) validation for §11 documents.
    "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# OQ-017d / AD-024 — SDKs for the eval harness only; never a runtime
# dependency (evals are inherently online; NFR-003 is unaffected).
# `anthropic` drives the demoted raw-loop smoke fixture (OQ-027d);
# `claude-agent-sdk` is the real-host gate driver (AD-024/OQ-027a), pinned in
# evals/runner.json.harness — bump both there and here in one eval-policy commit.
# claude-agent-sdk is pinned to the runner.json harness.version (gate identity,
# AD-024/OQ-027b) — bump both together in an eval-policy commit.
evals = ["anthropic>=0.40", "claude-agent-sdk==0.2.116"]

[tool.hatch.build.targets.wheel]
packages = ["src/transon_authoring"]

# ARCHITECTURE §10 — repo-root resources/ is canonical; the wheel maps it into the
# package so the installed library serves the snapshot offline (NFR-003).
[tool.hatch.build.targets.wheel.force-include]
"resources" = "transon_authoring/resources"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Readable output by default. `-q` prints one anonymous dot per test, which tells
# you nothing while the suite runs — and this suite is slow (~8 min: the AC-035 /
# orchestrate tests each re-run the corpus lint, which spawns one AD-017 sandbox
# worker subprocess per case). `-ra` summarises everything non-passing;
# `--durations` names the slow tests instead of leaving them a mystery.
addopts = "-ra --durations=15"
markers = [
    "subprocess: spawns real `python -m transon_authoring` subprocesses (e.g. the NFR-003/AC-020 offline sanity checks)",
]
